--- a/app/index.html
+++ b/app/index.html
@@ -2,11 +2,75 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Тестовая хрень</title>
+	<title>Свечеварение</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 	<script src="/js/app.min.js"></script>
 	<link rel="stylesheet" href="/css/app.min.css">
 </head>
 <body>
-<div class="container">1233</div>
+	<header class="header">
+		<div class="header-container container">
+			<div class="header-row row">
+				<div class="header-logo col-12 col-md-2">
+					<a href="/" class="header-logo__link">
+						<img class="header-logo__img" src="svg/logo.svg" alt="Всё для создания свечей">
+					</a>
+				</div>
+				<div class="header-contacts col-12 col-md-7">
+					<div class="header-phone">
+						<div class="header-phone__row">
+							<a href="tel:+78002001219" class="header-phone__link">8 800 200-12-19</a>
+						</div>
+						<div class="header-phone__row">
+							<span class="header-phone__txt">заказать звонок</span>
+						</div>
+					</div>
+					<div class="header-email">
+						<div class="header-email__row">
+							<a href="mailto:infosvecha@gmail.com" class="header-email__link">infosvecha@gmail.com</a>
+						</div>
+					</div>
+					<div class="header-time">
+						<div class="header-time__row">Пн-Пт - c 8:30 до 16:30</div>
+						<div class="header-time__row">Сб-Вс  - выходные дни</div>
+					</div>
+				</div>
+				<div class="header-page col-12 col-md-3">
+					<ul class="header-page__list">
+						<li class="header-page__item">
+							<a href="/search" class="header-page__link search-page"></a>
+						</li>
+						<li class="header-page__item">
+							<a href="/account" class="header-page__link account-page"></a>
+						</li>
+						<li class="header-page__item">
+							<a href="/favorites" class="header-page__link favorites-page"></a>
+						</li>
+						<li class="header-page__item">
+							<a href="/cart" class="header-page__link cart-page">
+								<span class="header-page__txt">Корзина</span>
+								<span class="header-page__price">2 346 Р.</span>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</header>
+	<main class="content">
+		<div class="content-container container">
+			<div class="content-row row">
+
+			</div>
+		</div>
+	</main>
+	<footer class="footer">
+		<div class="footer-container container">
+			<div class="footer-row row">
+			
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
